--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                         <a href="http://go.microsoft.com/fwlink/?LinkID=206977">Terms of Use</a>
                     </span>
                     <span id="Footer_trademarks">
-                        <a href="http://go.microsoft.com/?linkid=9851308">Trademarks</a>
+                        <a href="https://www.microsoft.com/trademarks">Trademarks</a>
                     </span>
                 </span>
                 <div id="FooterFarStack">
