Web Application Updates (#384)
* Web page fixes (#1)

* Fixed search issue: Search by keyword doesn't work as expected under certain conditions

* Added Geo field to search

* Added the ability to alphabetize the technologies, language, geo and verticals list

* Changed Vertical search topic to ‘Industry associated with solution’

* Added Front Matter's parmalink section to existing templates

* Added "geo" field to templates' front matter

* Replaced geo by geolocation

* Travis CI script improvements (#2)

* Added test to validate duplicated URLs in permalinks. Improved test script verbosity

* Added support for image links validation

* Added logic to verify links

* Added validation for color blue

* Improved Quality Check script

* Improved mandatory sections detection in quality check

* Converted Content section checks from error to warning and Made all the tags in Front Matter mandatory

* Revert "Travis CI script improvements (#2)"

This reverts commit 6a1788c4b89c12adc96c5c416ccb73661e2a87ed.

--- a/_includes/search.html
+++ b/_includes/search.html
@@ -46,7 +46,7 @@
             Use the filter and keyword search below to find stories that matter to you.
         </div>
 
-        <form id="AdvancedSearch" class="form-horizontal">
+        <form id="AdvancedSearch" class="form-horizontal" onsubmit="return customSearch.applyFilters(true);">
             <div class="pad-bottom">
                 <h2>Refine results by:</h2>
                 <div class="treeview">
@@ -63,7 +63,14 @@
                                 {{ category.showAs }} <label class="items-selected"></label>
                             </label>
                             <ul>
-                                {% assign items = categories[i] %}
+                                {% comment %} Determine if the category should be sorted or not. {% endcomment %}
+                                
+                                {% if category.sorted == true %}
+                                    {% assign items = categories[i] | sort %}
+                                {% else %}
+                                    {% assign items = categories[i] %}
+                                {% endif %}
+                                
                                 {% for item in items %}
                                 <li>
                                     <input type="checkbox" id="item-{{ category.name }}-{{ item.name }}">
