Updated javascript folder and layouts folder (#692)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,5 +66,6 @@
     <script src="{{ "/javascripts/" | prepend: site.baseurl }}{{js_file}}"></script>
         {% endfor %}
     {% endif %}
+     <script src="{{ "/javascripts/asimov.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
