--- a/_layouts/slim.html
+++ b/_layouts/slim.html
@@ -25,5 +25,6 @@
     <script src="{{ "/javascripts/main.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/javascripts/interactions.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/javascripts/anchorizeHeaders.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/javascripts/asimov.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
